added testing frameworks for backend apis and minor bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <script src="js/dataService.js"></script>
     
     <!-- Load the working knowledge graph visualization -->
-    <script src="js/knowledgeGraph.basic.js"></script>
+    <script src="js/knowledgeGraph.js"></script>
     <script src="js/main.js"></script>
     
     <!-- Fallback in case the main visualization fails -->
